--- a/app/src/main/res/layout/child.xml
+++ b/app/src/main/res/layout/child.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteY="25dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,18 +11,17 @@
         android:orientation="horizontal">
 
         <CheckBox
-            android:id="@+id/dcheckbox"
-            android:textSize="15sp"
+            android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:textSize="15sp" />
+
         <TextView
             android:id="@+id/paramName"
-            android:text="Param1"
-            android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:text="Param1"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
